--- a/css/style.css
+++ b/css/style.css
@@ -102,12 +102,12 @@ a:visited {
 
 /* div class */
 .about {
-    padding: 20px;
-    margin-top: 20px;
+    padding: 24px;
+    margin-top: 24px;
 }
 
 .about h6 {
-    font-size: 48px;
+    font-size: 52px;
     color: #016cc7;
     margin: 5;
 }
@@ -150,19 +150,21 @@ a:visited {
 }
 
 .main .about {
-    width: 60%;
+    width: 80%;
     -webkit-transition: all 0.3s;
     -moz-transition: all 0.3s;
     transition: all 0.3s;
     margin-right: 20px;
-    border: 3px solid #f6f6f6;
-    border-radius: 5px;
+    margin-top: 100px;
+    border: 6px solid #dfdede;
+    border-radius: 6px;
+
 }
 
 /* Display picture */
 .main-img {
-    max-width: 50%;
-    border: 4px solid #efefef;
+    max-width: 60%;
+    border: 8px solid #efefef;
     border-radius: 50%;
     -moz-transition: all 0.3s;
     -webkit-transition: all 0.3s;
