--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 body {
     font-family: 'Montserrat', sans-serif;
     color: #404142;
-    font-size: 24px;
+    font-size: 38px;
     letter-spacing: 0.2px;
 }
 
@@ -63,7 +63,7 @@ a:visited {
 
 .btn-lg {
     padding: 3px 10px;
-    font-size: 24px;
+    font-size: 36px;
     line-height: none;
     border-radius: 4px;
 }
@@ -75,6 +75,7 @@ a:visited {
     -webkit-transition: all 0.6s;
     -moz-transition: all 0.6s;
     transition: all 0.6s;
+    margin-bottom: 16;
 
 }
 
@@ -107,9 +108,10 @@ a:visited {
 }
 
 .about h6 {
-    font-size: 52px;
+    font-size: 80px;
     color: #016cc7;
-    margin: 5;
+    margin-bottom: 8;
+    padding-bottom: 16;
 }
 
 .about h6:hover {
@@ -124,7 +126,7 @@ a:visited {
 
 .about li {
     color: #016cc7;
-    font-size: 24px;
+    font-size: 36px;
     opacity: 0.9;
     padding: 14px;
     font-weight: bolder;
@@ -163,7 +165,7 @@ a:visited {
 
 /* Display picture */
 .main-img {
-    max-width: 60%;
+    width: 50%;
     border: 8px solid #efefef;
     border-radius: 50%;
     -moz-transition: all 0.3s;
